clean up intro a bit

--- a/tutorials/R/AIS-data/AIS-QF-tutorial/download-NEON-AIS-data/download-NEON-AIS-data.html
+++ b/tutorials/R/AIS-data/AIS-QF-tutorial/download-NEON-AIS-data/download-NEON-AIS-data.html
@@ -80,18 +80,18 @@ section.footnotes::before {
 <div class="date"><h3></h3></div>
 </div>
 <div class="body">
-<p>This tutorial covers downloading NEON Aquatic Instrument System (AIS) data,
-using the neonUtilities R package, as well as basic instruction in beginning to
-explore and work with the downloaded data, including guidance in navigating
-data documentation, separating data using the horizontalPosition variable and
-interpreting quality flags.</p>
+<p>This tutorial covers downloading NEON Aquatic Instrument System (AIS) data
+using the neonUtilities R package, as well as basic instruction in exploring
+and working with the downloaded data.You will learn how to navigate data
+documentation, separate data using the horizontalPosition variable, and
+interpret quality flags.</p>
 <div id="ds-objectives" markdown="1">
 <h2 id="objectives">Objectives</h2>
 <p>After completing this activity, you will be able to:</p>
 <ul>
 <li>Download NEON AIS data using the <code>neonUtilities</code> package.</li>
-<li>Understand how data sets are formatted and load them into R for analyses.</li>
-<li>Separate data collected at different sensor locations using the HOR variable.</li>
+<li>Understand how data sets are formatted and load them into R for analysis.</li>
+<li>Separate data collected at different sensor locations using the horizontalPosition (<code>HOR</code>) variable.</li>
 <li>Understand and filter data using quality flags.</li>
 </ul>
 <h2 id="things-you-ll-need-to-complete-this-tutorial">Things You’ll Need To Complete This Tutorial</h2>
