--- a/tutorials/R/Lidar/lidar-topography/veg_structure_and_chm/veg_structure_and_chm.html
+++ b/tutorials/R/Lidar/lidar-topography/veg_structure_and_chm/veg_structure_and_chm.html
@@ -140,18 +140,21 @@ setwd(wd)
 </code></pre>
 <h2 id="2-vegetation-structure-data">2. Vegetation structure data</h2>
 <p>Download the vegetation structure data using the <code>loadByProduct()</code> function in
-the <code>neonUtilities</code> package. Inputs needed to the function are:</p>
+the <code>neonUtilities</code> package. Inputs to the function are:</p>
 <ul>
 <li><code>dpID</code>: data product ID; woody vegetation structure = DP1.10098.001</li>
 <li><code>site</code>: (vector of) 4-letter site codes; Wind River = WREF</li>
 <li><code>package</code>: basic or expanded; we’ll download basic here</li>
+<li><code>release</code>: which data release to download; we’ll use RELEASE-2023</li>
 <li><code>check.size</code>: should this function prompt the user with an estimated download size? Set to <code>FALSE</code> here for ease of processing as a script, but good to leave as default <code>TRUE</code> when downloading a dataset for the first time.</li>
 </ul>
 <p>Refer to the <a href="https://www.neonscience.org/sites/default/files/cheat-sheet-neonUtilities.pdf" target="_blank">cheat sheet</a>
-for the <code>neonUtilities</code> package for more details if desired.</p>
+for the <code>neonUtilities</code> package for more details and the complete index of
+possible function inputs.</p>
 <pre><code>veglist &lt;- loadByProduct(dpID=&quot;DP1.10098.001&quot;, 
                          site=&quot;WREF&quot;, 
                          package=&quot;basic&quot;, 
+                         release=&quot;RELEASE-2023&quot;,
                          check.size = FALSE)
 </code></pre>
 <p>Use the <code>getLocTOS()</code> function in the <code>geoNEON</code> package to get
@@ -251,20 +254,50 @@ plot(valCHM$NEON_D16_WREF_DP3_580000_5075000_CHM~
 
 lines(c(0,50), c(0,50), col=&quot;grey&quot;)
 </code></pre>
-<p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Lidar/lidar-topography/veg_structure_and_chm/rfigs/buffer-chm-1.png" alt=" " /></p>
+<p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Lidar/lidar-topography/veg_structure_and_chm/rfigs/no-buffer-chm-1.png" alt=" " /></p>
 <p>How strong is the correlation between the ground and lidar
 measurements?</p>
 <pre><code>cor(valCHM$NEON_D16_WREF_DP3_580000_5075000_CHM, 
     vegsub$height, use=&quot;complete&quot;)
 
-## [1] 0.3775402
+## [1] 0.3824467
 </code></pre>
+<p>Now we remember there is uncertainty in the location of each tree, so the
+precise pixel it corresponds to might not be the right one. Let’s try
+adding a buffer to the extraction function, to get the tallest tree within
+the uncertainty of the location of each tree.</p>
+<pre><code>valCHMbuff &lt;- extract(chm, 
+                  buffer(vect(cbind(vegsub$adjEasting,
+                  vegsub$adjNorthing)),
+                  width=vegsub$adjCoordinateUncertainty),
+                  fun=max)
+
+
+
+plot(valCHMbuff$NEON_D16_WREF_DP3_580000_5075000_CHM~
+       vegsub$height, pch=20, xlab=&quot;Height&quot;, 
+     ylab=&quot;Canopy height model&quot;)
+
+lines(c(0,50), c(0,50), col=&quot;grey&quot;)
+</code></pre>
+<p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Lidar/lidar-topography/veg_structure_and_chm/rfigs/buffer-chm-1.png" alt=" " /></p>
+<pre><code>cor(valCHMbuff$NEON_D16_WREF_DP3_580000_5075000_CHM, 
+    vegsub$height, use=&quot;complete&quot;)
+
+## [1] 0.3698753
+</code></pre>
+<p>Adding the buffer has actually made our correlation slightly worse. Let’s
+think about the data.</p>
 <p>There are a lot of points clustered on the 1-1 line, but there is also a
 cloud of points above the line, where the measured height is lower than
 the canopy height model at the same coordinates. This makes sense, because
-we made no attempt to filter out the understory. There are likely many
+the tree height data include the understory. There are many
 plants measured in the vegetation structure data that are not at the top
 of the canopy, and the CHM sees only the top surface of the canopy.</p>
+<p>This also explains why the buffer didn’t improve things. Finding the
+highest CHM value within the uncertainty of a tree should improve the fit
+for the tallest trees, but it’s likely to make the fit worse for the
+understory trees.</p>
 <p>How to exclude understory plants from this analysis? Again, there are many
 possible approaches. We’ll try out two, one map-centric and one
 tree-centric.</p>
@@ -315,7 +348,7 @@ lines(c(0,50), c(0,50), col=&quot;grey&quot;)
 <pre><code>cor(binCHM$NEON_D16_WREF_DP3_580000_5075000_CHM, 
     vegbin$height, use=&quot;complete&quot;)
 
-## [1] 0.2275314
+## [1] 0.2244228
 </code></pre>
 <p>The understory points are thinned out substantially, but so are the rest.
 We’ve lost a lot of data by going to a lower resolution.</p>
@@ -366,7 +399,7 @@ lines(c(0,50), c(0,50), col=&quot;grey&quot;)
 <pre><code>cor(filterCHM$NEON_D16_WREF_DP3_580000_5075000_CHM,
     vegfil$height)
 
-## [1] 0.7833395
+## [1] 0.8070586
 </code></pre>
 <p>This is quite a bit better! There are still several understory points we
 failed to exclude, but we were able to filter out most of the understory
@@ -392,7 +425,7 @@ lines(c(0,50), c(0,50), col=&quot;grey&quot;)
 <pre><code>cor(filterCHM$NEON_D16_WREF_DP3_580000_5075000_CHM,
     vegfil$height)
 
-## [1] 0.9000654
+## [1] 0.9057883
 </code></pre>
 <p>Nice!</p>
 <p>One final note: however we slice the data, there is a noticeable bias
