fix libary imports
remove NOT_VERIFIED.txt and empty .R file, need to generate that, knit not working as expected

--- a/tutorials/R/AOP/Hyperspectral/Work-With-Hyperspectral-Data-In-R/Work-With-Hyperspectral-Data-In-R.html
+++ b/tutorials/R/AOP/Hyperspectral/Work-With-Hyperspectral-Data-In-R/Work-With-Hyperspectral-Data-In-R.html
@@ -173,7 +173,7 @@ Let’s start by calling the needed packages and reading in our NEON HDF5 file.<
 <code>packageVersion(&quot;rhdf5&quot;)</code> to check the package version.</p>
 <pre><code># Load `terra`, `rhdf5`, and `rgdal` packages and read NIS data into R
 
-library(raster)
+library(terra)
 
 library(rhdf5)
 
