code to .Rmd since .R knitting isn't working right now, try to fix challenges box appearance at the end

--- a/tutorials/R/AOP/Hyperspectral/Work-With-Hyperspectral-Data-In-R/Work-With-Hyperspectral-Data-In-R.html
+++ b/tutorials/R/AOP/Hyperspectral/Work-With-Hyperspectral-Data-In-R/Work-With-Hyperspectral-Data-In-R.html
@@ -175,15 +175,6 @@ Let’s start by calling the needed packages and reading in our NEON HDF5 file.<
 
 library(terra)
 
-## terra 1.7.55
-
-## 
-## Attaching package: 'terra'
-
-## The following object is masked from 'package:knitr':
-## 
-##     spin
-
 library(rhdf5)
 
 
@@ -807,7 +798,7 @@ writeRaster(b9r,
 H5close()
 </code></pre>
 <div id="ds-challenge" markdown="1">
-### Challenge: Work with Rasters
+<h3 id="challenge-work-with-rasters">Challenge: Work with Rasters</h3>
 <p>Try these three extensions on your own:</p>
 <ol>
 <li>
